# soundboard_backend

./: Cargo.toml  LICENSE  README.md  soundboard.sql
src/: connection.rs  forbidden.rs  lib.rs  not_found.rs
src/api/: is_logged_in.rs  login.rs  logout.rs  mod.rs  register.rs
src/api/sound/: add_track.rs  get_track.rs  list_tracks.rs  mod.rs  remove_track.rs
