[package]
name = "soundboard"
version = "1.0.2"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
sqlx = { version = "0.8.3", features = ["mysql", "sqlx-mysql", "runtime-tokio", "json"] }
tokio = { version = "1.41.1", features = ["full"] }
openssl = "0.10.68"
serde = "1.0.216"
serde_json = "1.0.133"
drain_common = "0.6.7"
drain_macros = "0.6.2"
